--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
 #profile{
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
+}
+.label-as-badge {
+    position: absolute;
+    border-radius: 1em;
+    top:8px;
+    left: 3px;
 }
